    internal: dont print 60s but increment minute          issue #302
    external: zswap & zswapped added to meminfo api
    external: schedule class added to pids api
    external: disk sleep added to pids api, sleep revised  issue #265
    external: docker containers added to pids api
  * pgrep: select process by environment variable          issue #167
  * ps: Add environ field
  * ps: restore lost tasks for options --sort with -H      issue #304
  * ps: add 'docker' containers field, similar to 'lxc'
  * slabtop: Add --human option for slab size
  * sysctl: Add glob excludes                              merge #206
  * top: added a 'CLS' scheduling class field, like ps
  * top: exploit library addition of 'disk sleep'          issue #265
  * top: add 'docker' containers field, similar to 'lxc'
  * w: Don't segfault with -s option                       issue #301
  * w: Cache pids list                                     issue #305
  * watch: use clock_gettime                               issue #295

procps-ng-4.0.4
---------------
  * library (API & ABI unchanged)
    increment revision: 0:2:0
    tolerates all potential 'cpuinfo' formats              issue #272
    restore the proper main thread tics valuations         issue #280
    Remove myself from proc count                          merge #193
    Refactor the escape code                               Debian #1035649
  * free: -L one line output                               issue #156
  * pgrep: Use only --signal option for signal             Debian #1031765
  * pgrep: suppress >15 warning if using regex             Debian #1037450
  * pidof: Add -t option to show threads                   merge #190
  * pmap: Reset totals between processes                   issue #298
  * ps: fixed missing or corrupted fields with -m option   Debian #1036631, issue #279
  * ps: Fix buffer overflow in -C option CVE-2023-4016     Debian #1042887, issue #297