@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2004-2023 Craig Small <csmall@dropbear.xyz>
+.\" Copyright (c) 2004-2024 Craig Small <csmall@dropbear.xyz>
 .\" Copyright (c) 2011-2023 Jim Warner <james.warner@comcast.net>
 .\" Copyright (c) 2011-2012 Sami Kerola <kerolasa@iki.fi>
 .\" Copyright (c) 1998-2003 Albert Cahalan
@@ -10,7 +10,7 @@
 .\" (at your option) any later version.
 .\"
 .\"
-.TH PS "1" "2023-10-04" "procps-ng" "User Commands"
+.TH PS "1" "2024-01-30" "procps-ng" "User Commands"
 .\"
 .\" Ragged-right text.
 .na
@@ -1337,6 +1337,16 @@ see
 .BR egroup .
 (alias
 .BR egroup ).
+T}
+
+htprv	HTPRV	T{
+The amount of private memory backed by hugetlbfs page which is not counted in the \fBrss\fR
+or \fBpss\fR format options.
+T}
+
+htshr	HTSHR	T{
+The amount of shared memory backed by hugetlbfs page which is not counted in the \fBrss\fR
+or \fBpss\fR format options.
 T}
 
 ignored	IGNORED	T{
