@@ -162,6 +162,8 @@ makEXT(SIGCATCH)
 makEXT(SIGIGNORE)
 makEXT(SIGNALS)
 makEXT(SIGPENDING)
+makEXT(SMAP_HUGE_TLBPRV)
+makEXT(SMAP_HUGE_TLBSHR)
 makEXT(SMAP_PRV_TOTAL)
 makEXT(SMAP_PSS)
 makEXT(STATE)
