@@ -140,6 +140,8 @@ makREL(SIGCATCH)
 makREL(SIGIGNORE)
 makREL(SIGNALS)
 makREL(SIGPENDING)
+makREL(SMAP_HUGE_TLBPRV)
+makREL(SMAP_HUGE_TLBSHR)
 makREL(SMAP_PRV_TOTAL)
 makREL(SMAP_PSS)
 makREL(STATE)
