@@ -3,3 +3,4 @@
 site.bak
 site.exp
 test-schedbatch
+test-hugetlb
