@@ -9,6 +9,7 @@ procps-ng-NEXT
     external: docker containers added to pids api
   * pgrep: select process by environment variable          issue #167
   * ps: Add environ field
+  * ps: Add htprv and htshr fields for HugeTables
   * ps: restore lost tasks for options --sort with -H      issue #304
   * ps: add 'docker' containers field, similar to 'lxc'
   * slabtop: Add --human option for slab size
